Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11
Description
marko encountered that few test cases in encryption and mariabackup suite are hanging
when innodb_undo_tablespaces > 0 (MDEV-29986). Test cases in encryption suites are
encrypt_and_grep
|
debug_key_management
|
innodb-remove-encryption
|
innodb-spatial-index
|
innodb-encrypt-freed
|
innodb_encrypt_key_rotation_age
|
innodb_first_page
|
InnoDB:
encryption_threads_shutdown
|
Mariabackup:
mdev-14447
|
skip_innodb
|
xb_partition
|
Thanks to marko for finding out the test while working on MDEV-29986
As a part of the patch, InnoDB should display undo tablespace name as undo001, undo002 and soon.
Attachments
Issue Links
- blocks
-
MDEV-29986 Set innodb_undo_tablespaces=3 by default
-
- Closed
-
- relates to
-
MDEV-25312 Remove fil_space_t::name and related code
-
- Closed
-